# App_client_ai

./: .gitignore  README.md  index.html  nodemon.json  package.json  template_index.html  tsconfig.json  vite.config.ts  webpack.build.js
file/: setting
public/: index.html
public/css/: main.css  main.css.map
src/: HelperSrc.ts  Main.ts  Mcp.ts  Session.ts  custom.d.ts  index.ts  main.css  main.css.map  main.ts  preload.ts  renderer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: display.rs  lib.rs  main.rs  screen_capture.rs
src/controller/: Action.ts  Ai.ts  Automate.ts  Chat.ts  Dialog.ts  Document.ts  Helper.ts  Index.ts  Mcp.ts  MenuItem.ts  Pagination.ts  Setting.ts  Toast.ts  Tray.ts  Window.ts
src/model/: Ai.ts  Automate.ts  Chat.ts  Dialog.ts  Document.ts  HelperSrc.ts  Index.ts  Mcp.ts  MenuItem.ts  Pagination.ts  Session.ts  Toast.ts  Tray.ts  Window.ts
src/style/: button.scss  form.scss  main.scss  pagination.scss  table.scss
src/style/setting/: color.scss  parameter.scss
src/style/view/: ai.scss  chat.scss  dialog.scss  document.scss  index.scss  mcp.scss  menuItem.scss  toast.scss
src/view/: Ai.tsx  Chat.tsx  Dialog.tsx  Document.tsx  Index.tsx  Mcp.tsx  MenuItem.tsx  Pagination.tsx  Toast.tsx
