[package]
name = "client-ai"
version = "1.0.0"
description = "AI client application for communicating with a model hosted on a server."
authors = ["cimo"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }

tauri-plugin-log = { version = "2.8.0", features = [] }
tauri-plugin-dialog = { version = "2.7.1", features = [] }
tauri-plugin-fs = { version = "2.5.1", features = [] }
tauri-plugin-http = { version = "2.5.9", features = ["dangerous-settings", "unsafe-headers"] }
tauri-plugin-opener = { version = "2.5.4", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = [] }
log = { version = "0.4", features = [] }
xcap = { version = "0.8.1", features = [] }
base64 = { version = "0.22.1", features = [] }
enigo = { version = "0.6.1", features = [] }
